--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "egg": "^1.9.0",
     "egg-scripts": "^2.1.0",
+    "egg-view-nunjucks": "^2.1.4",
     "koa": "^2.3.0"
   },
   "devDependencies": {
@@ -14,6 +15,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
+    "css-loader": "^0.28.7",
     "directory-named-webpack-plugin": "^2.2.3",
     "egg-bin": "^4.3.0",
     "egg-ci": "^1.8.0",
@@ -23,8 +25,11 @@
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^3.2.2",
     "extract-text-webpack-plugin": "^3.0.1",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "koa-webpack-dev-middleware": "^2.0.2",
+    "node-notifier": "^5.1.2",
+    "style-loader": "^0.19.0",
     "todomvc-app-css": "^2.1.0",
     "toxic-predicate-functions": "^0.1.5",
     "vue": "^2.5.2",
