--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "html-webpack-plugin": "^2.30.1",
     "koa-webpack-dev-middleware": "^2.0.2",
     "node-notifier": "^5.1.2",
+    "store": "^2.0.12",
     "style-loader": "^0.19.0",
     "todomvc-app-css": "^2.1.0",
     "toxic-predicate-functions": "^0.1.5",
+    "toxic-utils": "^0.1.6",
     "vue": "^2.5.2",
     "vue-loader": "^13.3.0",
     "vue-template-compiler": "^2.5.2",
