--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "egg": "^1.9.0",
+    "egg-redis": "^1.0.2",
     "egg-scripts": "^2.1.0",
     "egg-view-nunjucks": "^2.1.4",
     "koa": "^2.3.0"
@@ -28,7 +29,9 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "koa-webpack-dev-middleware": "^2.0.2",
+    "koa-webpack-hot-middleware": "^1.0.3",
     "node-notifier": "^5.1.2",
+    "qs": "^6.5.1",
     "store": "^2.0.12",
     "style-loader": "^0.19.0",
     "todomvc-app-css": "^2.1.0",
@@ -39,6 +42,7 @@
     "vue-template-compiler": "^2.5.2",
     "vuex": "^3.0.0",
     "webpack": "^3.8.1",
+    "webpack-assets-manifest": "^1.0.0",
     "webstorm-disable-index": "^1.2.0",
     "write-file-webpack-plugin": "^4.2.0"
   },
